# humanoid_rl

./: .gdb_history  .gitignore  README.md
src/humanoid_rl/: CMakeLists.txt  package.xml
src/humanoid_rl/bag/: action_output.bag  left_bye_filtered.bag  print_actions.py
src/humanoid_rl/config/: rl_xbot.yaml
src/humanoid_rl/include/: humanoid_rl_bag.h  humanoid_rl_controller.h  humanoid_rl_inference.h  humanoid_rl_version.h  humanoid_utils.h
src/humanoid_rl/include/common_tools/: utils_common.cpp
src/humanoid_rl/include/common_tools/include/: utils_colorprint.hpp  utils_common.h  utils_data_io.hpp  utils_eigen.hpp  utils_kd_hash.hpp  utils_logger.hpp  utils_os_compatible.hpp  utils_random.hpp  utils_serialization.hpp  utils_timer.hpp
src/humanoid_rl/launch/: humanoid_rl_controller.launch  humanoid_rl_controller_no_joystick.launch  on_policy.launch
src/humanoid_rl/model/: policy_1.pt  policy_dh.jit  xbot_policy.onnx
src/humanoid_rl/script/: calculate_imu_bias.py  extract_bag.py  print_actions.py
src/humanoid_rl/src/: humanoid_rl_bag.cpp  humanoid_rl_controller.cpp  humanoid_rl_inference.cpp  humanoid_utils.cpp
src/joy_stick/: CMakeLists.txt  README.md  package.xml  readme.md
src/joy_stick/config/: joy_xbot.yaml
src/joy_stick/include/: joy.h  joy_stick_impl.h
src/joy_stick/launch/: joy_stick.launch
src/joy_stick/src/: joy.cpp  joy_stick_impl.cpp  log4z.cpp
src/robot_action_msg/: CMakeLists.txt
